<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical">

    <View
        android:id="@+id/view_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/status_bar_height"
        android:background="@color/toolbar" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:minHeight="46dp"
        android:background="@color/toolbar"
        app:title=""
        >
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_menu_search"
            android:textColor="@color/toolbar_title"
            android:textSize="18sp"
            android:layout_gravity="center"/>
    </android.support.v7.widget.Toolbar>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@color/search_title">

        <View
            android:layout_width="5dp"
            android:layout_height="20dp"
            android:layout_marginEnd="5dp"
            android:background="@color/md_blue_500"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="@dimen/textSize_15"
            android:text="@string/search_tab_text_1" />
    </LinearLayout>

    <Button
        android:id="@+id/search_bt_1"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="@color/botton"
        android:gravity="center"
        android:text="@string/search_button_text_1"
        android:textColor="@color/text"/>

    <Button
        android:id="@+id/search_bt_2"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="@color/botton"
        android:gravity="center"
        android:text="@string/search_button_text_2"
        android:textColor="@color/text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@color/search_title">

        <View
            android:layout_width="5dp"
            android:layout_height="20dp"
            android:layout_marginEnd="5dp"
            android:background="@color/md_blue_500"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="@dimen/textSize_15"
            android:text="@string/search_tab_text_2" />
    </LinearLayout>

    <Button
        android:id="@+id/search_bt_3"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="@color/botton"
        android:gravity="center"
        android:text="@string/search_button_text_3"
        android:textColor="@color/text"/>

    <Button
        android:id="@+id/search_bt_4"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="@color/botton"
        android:gravity="center"
        android:text="@string/search_button_text_4"
        android:textColor="@color/text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@color/search_title">

        <View
            android:layout_width="5dp"
            android:layout_height="20dp"
            android:layout_marginEnd="5dp"
            android:background="@color/md_blue_500"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="@dimen/textSize_15"
            android:text="@string/search_tab_text_3" />
    </LinearLayout>

    <Button
        android:id="@+id/search_bt_5"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="@color/botton"
        android:gravity="center"
        android:textSize="@dimen/textSize_15"
        android:text="@string/search_button_text_5"
        android:textColor="@color/text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@color/search_title">

        <View
            android:layout_width="5dp"
            android:layout_height="20dp"
            android:layout_marginEnd="5dp"
            android:background="@color/md_blue_500"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="@dimen/textSize_15"
            android:text="@string/search_tab_text_4" />
    </LinearLayout>

    <Button
        android:id="@+id/search_bt_6"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="@color/botton"
        android:gravity="center"
        android:text="@string/search_button_text_6"
        android:textColor="@color/text"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>